--- a/insight/templates/samples/analysis.html
+++ b/insight/templates/samples/analysis.html
@@ -1,11 +1,12 @@
 {% extends 'layout.html' %}
 {% block title %}Sample Report {{ sample_id|truncate(255, True) }}{% endblock %}
 {% block body %}
-{{ bootstrap.block_header('Analysis') }}
+{% include 'samples/widgets/mitre_attack.html' with context %}
+
 {% if 'flags' in sample.metadata -%}
     {% for analysis, values in sample.metadata.flags.items() %}
         {% with analysis=analysis, values=values   %}
-            {% include 'samples/widgets/flag_list.html' %}
+            {% include 'samples/widgets/flag_list.html' with context %}
         {% endwith %}
     {% endfor %}
 {% else -%}
