--- a/insight/templates/samples/list.html
+++ b/insight/templates/samples/list.html
@@ -8,5 +8,9 @@
     <div class="col-lg-12 col-md-12">
     {% include 'samples/widgets/sample_list.html' -%}
     </div><!-- .col-12 -->
+    <div class="col-lg-12 col-md-12">
+    {% include 'samples/widgets/pagination.html' -%}
+    </div><!-- .col-12 -->
+
 </div><!-- .row -->
 {% endblock %}
