--- a/insight/templates/layout/nav.html
+++ b/insight/templates/layout/nav.html
@@ -80,9 +80,12 @@
                     {% if sample %}
                     <li class="header">ANALYSIS NAVIGATION</li>
                     {{ bootstrap.nav_item('Overview', url_for('samples.view', sample_id=sample.id), 'info', 'samples.view') }}
-                    {{ bootstrap.nav_item('Artifacts', url_for('samples.artifacts', sample_id=sample.id), 'fingerprint', 'samples.artifacts') }}
-                    {{ bootstrap.nav_item('Intelligence', url_for('samples.analysis', sample_id=sample.id), 'lightbulb_outline', 'samples.analysis') }}
-
+                    {% if 'artifacts' in sample.metadata.keys() -%}
+                    {{ bootstrap.nav_item('Artifacts', url_for('samples.artifacts', sample_id=sample.id), 'fingerprint', 'samples.artifacts', children = sample.metadata.artifacts.keys()) }}
+                    {% endif -%}
+                    {% if 'flags' in sample.metadata.keys() -%}
+                    {{ bootstrap.nav_item('Intelligence', url_for('samples.analysis', sample_id=sample.id), 'lightbulb_outline', 'samples.analysis', children = sample.metadata.flags.keys()) }}
+                    {% endif -%}
                     {% endif %}
                     <li class="header">MAIN NAVIGATION</li>
                     {{ bootstrap.nav_item('Dashboard', url_for('general.index'), 'home', 'general.index') }}
