--- a/insight/templates/samples/view.html
+++ b/insight/templates/samples/view.html
@@ -27,8 +27,8 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                     {{ bootstrap.add_dl_item('Known Filenames:', sample.metadata.known_filenames|join(', ')) }}
                     {{ bootstrap.add_dl_item('Size:', sample.metadata.size|filesizeformat) }}
                     {{ bootstrap.add_dl_item('Timestamp:', sample.metadata.timestamp) }}
-                    {{ bootstrap.add_dl_item('File Type:', sample.metadata.mimetype) }}
-                    {{ bootstrap.add_dl_item('File Description:', sample.metadata.mimetype_str) }}
+                    {{ bootstrap.add_dl_item('File Type:', sample.metadata.filetype) }}
+                    {{ bootstrap.add_dl_item('File Description:', sample.metadata.filetype_desc) }}
                     </dl>
         {{ bootstrap.card_close() }}
     </div><!-- .col -->
@@ -43,10 +43,14 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 {% else -%}
 {% set evil_color = 'red' -%}
 {% endif -%}
+{% if evil_rating > 0 -%}
 {{ bootstrap.infobox('Evil Rating'|upper,'%.2f%%'|format(evil_rating),icon_name='bug_report', color=evil_color, count_to=True, count_decimals=2, count_number=evil_rating) }}
+{% else -%}
+{{ bootstrap.infobox('Evil Rating'|upper,'%.2f%%'|format(evil_rating),icon_name='bug_report', color=evil_color) }}
+{% endif -%}
 {{ bootstrap.infobox('Artifacts'|upper,sample.total_artifacts(),icon_name='fingerprint', color='deep-purple', count_to=True) }}
 {{ bootstrap.infobox('Flags'|upper,sample.total_flags(),icon_name='flag', color='deep-purple', count_to=True) }}
-{{ bootstrap.infobox('Something'|upper,'IDK',icon_name='bookmark', color='deep-purple') }}
+{{ bootstrap.infobox('Mitre Att&ck Tactics'|upper,sample.total_mitre_attack_tactics(),icon_name='lightbulb_outline', color='deep-purple', count_to=True) }}
 </div><!-- .row -->
 
 {{ bootstrap.block_header('Threat analysis') }}
