--- a/insight/templates/layout.html
+++ b/insight/templates/layout.html
@@ -19,6 +19,7 @@
        </div>
     </section>
         {% include 'layout/scripts.html' -%}
+        {% block css -%}{% endblock -%}
         {% block javascript -%}{% endblock -%}
     </body>
 
