--- a/insight/templates/samples/widgets/geolocation.html
+++ b/insight/templates/samples/widgets/geolocation.html
@@ -1,8 +1,12 @@
 {{ bootstrap.block_header('Traced geolocations') }}
 <div class="row spaced">
     <div class="col-lg-12 col-md-12">
+{% if locations -%}
         {{ bootstrap.card_open() }}
             <div id="mapid"></div>
         {{ bootstrap.card_close() }}
+{% else %}
+    <p>No locations found on this sample's universe.</p>
+{% endif -%}
     </div><!-- .col -->
 </div><!-- .row -->
