--- a/insight/templates/macros/bootstrap.html
+++ b/insight/templates/macros/bootstrap.html
@@ -81,7 +81,7 @@
 {% endmacro -%}
 
 {% macro table_open(classes = [], head_values = [], small_header=False) -%}
-<div class="table-responsive">
+<div class="table-responsive no-more-tables">
     <table class="table {{ classes|join(' ') }}">
         <thead class="">
         <tr>
