--- a/insight/templates/samples/widgets/sample_list.html
+++ b/insight/templates/samples/widgets/sample_list.html
@@ -2,12 +2,12 @@
             {{ bootstrap.table_open(classes=['table-hover'], head_values=['Timestamp','Name','Filetype','Evil Rating','Status','']) }}
                     {% for sample in samples %}
                       <tr>
-                        <td>{{ sample.metadata.timestamp }}</td>
-                        <td>{{ sample.tracking_data.known_filenames[0]|truncate(64, True) }}</td>
-                        <td>{{ sample.metadata.filetype }}</td>
-                        <td>{{ bootstrap.progress(sample.evil_rating(), max=48) }}</td>
-                        <td>{% if 'scan_completed' in sample.tracking_data.tags %}<span class="badge badge-success">completed</span>{% else %}<span class="badge badge-light">pending</span>{% endif %}</td>
-                        <td><a href="{{ url_for('samples.view', sample_id=sample.id) }}" role="button" class="btn btn-primary btn-block">View</a></td>
+                        <td data-title="Timestamp">{{ sample.metadata.timestamp }}</td>
+                        <td data-title="Name">{{ sample.tracking_data.known_filenames[0]|truncate(64, True) }}</td>
+                        <td data-title="Filetype">{{ sample.metadata.filetype }}</td>
+                        <td data-title="Evil Rating">{{ bootstrap.progress(sample.evil_rating(), max=48) }}</td>
+                        <td data-title="Status">{% if 'scan_completed' in sample.tracking_data.tags %}<span class="badge badge-success">completed</span>{% else %}<span class="badge badge-light">pending</span>{% endif %}</td>
+                        <td data-title=""><a href="{{ url_for('samples.view', sample_id=sample.id) }}" role="button" class="btn btn-primary btn-block">View</a></td>
                     </tr>
                     {% endfor %}
             {{ bootstrap.table_close() }}
