--- a/insight/templates/samples/widgets/pagination.html
+++ b/insight/templates/samples/widgets/pagination.html
@@ -1,3 +1,4 @@
+{% if num_pages > 0 -%}
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li class="{% if page == 1 %}disabled {% endif -%}">
@@ -15,3 +16,4 @@
     </li>
   </ul>
 </nav>
+{% endif -%}
