--- a/insight/templates/general/dashboard.html
+++ b/insight/templates/general/dashboard.html
@@ -16,7 +16,6 @@
 </div><!-- .row -->
 {% endblock -%}
 {% block body -%}
-{{ bootstrap.block_header('Dashboard') }}
 
 <div id="bigChart" class="row">
     <div class="col-lg-9 col-md-12">
@@ -32,7 +31,7 @@
 </div><!-- .row -->
 
 
-{{ bootstrap.block_header('Latest samples'|upper) }}
+{{ bootstrap.block_header('Latest samples'|upper, all_url=url_for('samples.index'), all_text='View all samples') }}
 <div class="row">
     <div class="col-lg-12 col-md-12">
     {% include 'samples/widgets/sample_list.html' -%}
