--- a/insight/templates/macros/bootstrap.html
+++ b/insight/templates/macros/bootstrap.html
@@ -1,8 +1,8 @@
 {% macro block_header(text, all_url=None, all_color='primary', all_text='View all') -%}
 <div class="row block-header mt-4">
-    <h2 class="col-md-10">{{ text|upper }}</h2>
+    <h2 class="col-md-10 col-9">{{ text|upper }}</h2>
     {% if all_url -%}
-    <div class="col-md-2 text-right">
+    <div class="col-md-2 col-3 text-right">
     <a href="{{ all_url }}"><button class="btn btn-{{ all_color }} btn-sm" type="button">{{ all_text }}</button></a>
     </div>
     {% endif -%}
