--- a/insight/templates/layout/nav.html
+++ b/insight/templates/layout/nav.html
@@ -6,7 +6,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Brand -->
-      <a class="navbar-brand pt-0" href="./index.html">
+      <a class="navbar-brand pt-0" href="{{ url_for('general.index') }}">
         <img src="/static/img/brand/blue.png" class="navbar-brand-img" alt="aleph" />
       </a>
       <!-- User -->
@@ -99,7 +99,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link{% if request.url_rule.endpoint == 'samples.universe' %} active{% endif %}" href="{{ url_for('samples.universe', sample_id=sample.id) }}">
-              <i class="ni ni-planet"></i> Universe
+                <i class="ni ni-planet"></i> Universe 
             </a>
           </li>
           <li class="nav-item">
