--- a/insight/templates/layout/topnav.html
+++ b/insight/templates/layout/topnav.html
@@ -20,10 +20,10 @@
             <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <div class="media align-items-center">
                 <span class="avatar avatar-sm rounded-circle">
-                  <img alt="Image placeholder" src="/static/img/theme/team-4-800x800.jpg">
+                  <img alt="Image placeholder" src="/static/img/theme/team-5-800x800.jpg">
                 </span>
                 <div class="media-body ml-2 d-none d-lg-block">
-                  <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
+                  <span class="mb-0 text-sm  font-weight-bold">Jan Seidl</span>
                 </div>
               </div>
             </a>
