--- a/insight/templates/samples/submit.html
+++ b/insight/templates/samples/submit.html
@@ -12,7 +12,10 @@ $(function () {
 
     </script>
 {% endblock -%}
-{% block title %}Submit new sample{% endblock %}
+{% block title %}Submit new sample{% endblock -%}
+{% block css -%}
+<link href="{{ url_for('static', filename='vendor/dropzone/dropzone.css') }}" rel="stylesheet">
+{% endblock -%}
 {% block body %}
 
 <div class="row">
