--- a/insight/templates/samples/widgets/attrblock_iterable.html
+++ b/insight/templates/samples/widgets/attrblock_iterable.html
@@ -8,7 +8,7 @@
         </ul>
         {{ bootstrap.panel_close() }}
     {% elif value[0] is mapping -%}
-        <h5>{{ key|fromkey }}</h5>
+        <h4 class="text-uppercase mb-2 mt-4">{{ key|fromkey }}</h4>
         {% with value=value -%}
             {% include 'samples/widgets/attrblock_table.html' -%}
         {% endwith %}
